--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,28 @@
 {
     "name": "OGNIB Cards Dealer",
     "short_name": "OGNIB",
+    "description": "Bingo Link Sharing für Friends",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#020617",
-    "theme_color": "#020617",
+    "background_color": "#0f172a",
+    "theme_color": "#7c3aed",
+    "orientation": "portrait",
     "icons": [
       {
-        "src": "/vite.svg",
+        "src": "/icon-192.png",
         "sizes": "192x192",
-        "type": "image/svg+xml"
+        "type": "image/png",
+        "purpose": "any"
+      },
+      {
+        "src": "/icon-512.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "any maskable"
       }
     ],
     "share_target": {
-      "action": "/",
+      "action": "/share",
       "method": "GET",
       "enctype": "application/x-www-form-urlencoded",
       "params": {
